/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.multiraft.lock.v1;

import "gogoproto/gogo.proto";

message LockInput {
    oneof input {
        AcquireInput acquire = 1;
        ReleaseInput release = 2;
        GetInput get = 3;
    }
}

message LockOutput {
    oneof output {
        AcquireOutput acquire = 1;
        ReleaseOutput release = 2;
        GetOutput get = 3;
    }
}

message AcquireInput {

}

message AcquireOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message ReleaseInput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}

message ReleaseOutput {

}

message GetInput {
    
}

message GetOutput {
    uint64 index = 1 [
        (gogoproto.casttype) = "github.com/atomix/multi-raft-storage/api/atomix/multiraft/v1.Index"
    ];
}
